chore(backend): apply small fixes to openapi, run-server and index
